# gomoku

./: CMakeLists.txt  README.md  main.cpp
Referee/: Referee.cpp  Referee.hpp
board/: Board.cpp  Board.hpp
ia/: ia.cpp  ia.hpp
ihm/: Gomoku.qml  gomoku.qrc  ihm.cpp  ihm.hpp  ihm.ui
ihm/cell/: Cell.qml  qmldir
